--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -762,154 +762,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>NEIGHBOURHOOD</th>\n",
-       "      <th>MIX_SPAYED_OR_NEUTERED</th>\n",
-       "      <th>TRUE_SPAYED_OR_NEUTERED</th>\n",
-       "      <th>RATIO_SPAYED_OR_NEUTERED</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Abbottsfield</td>\n",
-       "      <td>98</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>0.8571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Albany</td>\n",
-       "      <td>88</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>0.9205</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Alberta Avenue</td>\n",
-       "      <td>798</td>\n",
-       "      <td>665.0</td>\n",
-       "      <td>0.8333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Alces</td>\n",
-       "      <td>12</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.7500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Aldergrove</td>\n",
-       "      <td>445</td>\n",
-       "      <td>387.0</td>\n",
-       "      <td>0.8697</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>332</th>\n",
-       "      <td>Garside Industrial</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>333</th>\n",
-       "      <td>Kennedale Industrial</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>334</th>\n",
-       "      <td>Parsons Industrial</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>335</th>\n",
-       "      <td>Rampart Industrial</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>336</th>\n",
-       "      <td>Southeast Industrial</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>337 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            NEIGHBOURHOOD  MIX_SPAYED_OR_NEUTERED  TRUE_SPAYED_OR_NEUTERED  \\\n",
-       "0            Abbottsfield                      98                     84.0   \n",
-       "1                  Albany                      88                     81.0   \n",
-       "2          Alberta Avenue                     798                    665.0   \n",
-       "3                   Alces                      12                      9.0   \n",
-       "4              Aldergrove                     445                    387.0   \n",
-       "..                    ...                     ...                      ...   \n",
-       "332    Garside Industrial                       2                      NaN   \n",
-       "333  Kennedale Industrial                       1                      NaN   \n",
-       "334    Parsons Industrial                       1                      NaN   \n",
-       "335    Rampart Industrial                       1                      NaN   \n",
-       "336  Southeast Industrial                       3                      NaN   \n",
-       "\n",
-       "     RATIO_SPAYED_OR_NEUTERED  \n",
-       "0                      0.8571  \n",
-       "1                      0.9205  \n",
-       "2                      0.8333  \n",
-       "3                      0.7500  \n",
-       "4                      0.8697  \n",
-       "..                        ...  \n",
-       "332                    0.0000  \n",
-       "333                    0.0000  \n",
-       "334                    0.0000  \n",
-       "335                    0.0000  \n",
-       "336                    0.0000  \n",
-       "\n",
-       "[337 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def ratio_SPAYED_OR_NEUTERED():\n",
     "\n",
@@ -942,8 +797,7 @@
     "    on mn.NEIGHBOURHOOD = tsn.NEIGHBOURHOOD\n",
     "    \"\"\")\n",
     "\n",
-    "    return pd.read_sql(sql = query, con = engine)\n",
-    "ratio_SPAYED_OR_NEUTERED()"
+    "    return pd.read_sql(sql = query, con = engine)\n"
    ]
   },
   {
